samples/_failures_safe/1761394396_d2f613_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78e057ab.c: In function ‘main’:
./samples/SAFE/__tmp_78e057ab.c:157:41: error: expected ‘)’ at end of input
  157 |                     print_matrix(&result
      |                                 ~       ^
      |                                         )
./samples/SAFE/__tmp_78e057ab.c:157:21: error: too few arguments to function ‘print_matrix’
  157 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_78e057ab.c:58:6: note: declared here
   58 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_78e057ab.c:157:21: error: expected declaration or statement at end of input
  157 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_78e057ab.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78e057ab.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78e057ab.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78e057ab.c:157:21: error: expected declaration or statement at end of input
